Fix footer menu alignment

--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -2,6 +2,12 @@
 
 .footer {
     border-top: 1px solid globals.$brand-border;
+    display: flex;
+    justify-content: space-between;
+    > div {
+        flex-grow: 1;
+        max-width: 256px;
+    }
     h3 {
         font-size: 32px;
         margin-bottom: 0;
